# vast-post-processing

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.txt  README  README.md  combined-fix-timestamps.py  convolve_neighbours.py  correct_vast.py  link_neighbours.py  mpi_test.py  pyproject.toml  selavy_combined.py  selavy_tiles.py  swarp.py
docker/: README.md  build_singularity.sh
docs/: README.md
docs/source/: combined-fix-timestamps.rst  conf.py  index.rst  modules.rst  vast_post_processing.rst
examples/: README.md
examples/mortimer/: 01-convolve_neighbours.sbatch  02-swarp.sbatch  03-selavy_setup.sbatch  04-selavy_submit.sbatch  05-rsync_outputs.sh  field_list.txt  selavy_template.in  selavy_template.sbatch
scripts/: README.md  combined-fix-timestamps.py  convolve_neighbours.py  correct_vast.py  link_neighbours.py  swarp.py
tests/: conftest.py  test.ipynb  test_combine.py  test_corrections.py  test_crop.py
tests/data/: conftest.py  pull_config.yaml  pull_data.py  test_data.py
tests/data_existence/: pull_data.sh  required_data.yaml  test_data_existence.py
tests/data_old/: old_test_data.py  pull_data.sh
tests/test_data_existence/: required_data.yaml  test_data_existence.py
tests/test_test-data/: fake_testdata.py  required_data.yaml  test_data_existence.py
tests/vast_post_processing/: conftest.py  paths.py  test.ipynb  test_combine.py  test_core.py  test_corrections.py  test_crop.py
tests/vast_post_processing/utils/: test_fileutils.py  test_misc.py
vast_combine/: mpi_logger.py  neighbours.py
vast_post_processing/: __init__.py  catalogs.py  combine.py  complete.py  compress.py  core.py  corrections.py  crop.py  crossmatch.py  neighbours.py  validation.py
vast_post_processing/cli/: __init__.py  _util.py  cleanup.py  convolve_neighbours.py  correct_vast.py  link_neighbours.py  run_corrections.py  run_crop.py  run_full_pipeline.py  selavy_combined.py  swarp.py  test.py  vast_post_processing.py
vast_post_processing/data/: .githash  default_config.yaml
vast_post_processing/utils/: __init__.py  catutils.py  fileutils.py  fitsutils.py  logutils.py  misc.py
