[tool.poetry]
name = "vast-combine"
version = "0.1.0"
description = ""
authors = ["Andrew O'Brien <obrienan@uwm.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.x"
pandas = "^1.3.3"
MOCPy = "^0.8.5"
loguru = "^0.5.3"
typer = "^0.4.0"
astropy = "^5.0.4"
scipy = "^1.7.1"
numpy = "^1.21.2"
schwimmbad = "^0.3.2"
radio-beam = "^0.3.3"
structlog = "^21.2.0"
racs-tools = {git = "https://github.com/marxide/RACS-tools.git", rev = "v2.0.1"}
mpi4py = {version = "^3.1.3", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^3.9.2"
rope = "^0.20.1"
ipython = "^7.28.0"
debugpy = "^1.5.1"

[tool.poetry.extras]
mpi = ["mpi4py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
