[tool.poetry]
name = "vast-post-processing"
version = "0.1.0"
description = ""
authors = ["Andrew O'Brien <obrienan@uwm.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.x"
pandas = "^1.3.3"
MOCPy = "^0.8.5"
loguru = "^0.5.3"
typer = "^0.4.0"
astropy = "^5.0.4"
scipy = "^1.7.1"
numpy = "^1.21.2"
schwimmbad = "^0.3.2"
radio-beam = "^0.3.3"
racs-tools = {git = "https://github.com/marxide/RACS-tools.git", rev = "v2.0.1"}
mpi4py = {version = "^3.1.3", optional = true}
sphinx = "^7.0.1"
numpydoc = "^1.5.0"
pydata-sphinx-theme = "^0.13.3"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^22.3.0"
flake8 = "^3.9.2"
rope = "^0.20.1"
ipython = "^7.28.0"
debugpy = "^1.5.1"

[tool.poetry.extras]
mpi = ["mpi4py"]

[tool.poetry.scripts]
link_neighbours = "vast_post_processing.cli.link_neighbours:app"
convolve_neighbours = "vast_post_processing.cli.convolve_neighbours:app"
swarp_neighbours = "vast_post_processing.cli.swarp:app"
selavy_prepare = "vast_post_processing.cli.selavy_combined:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
